--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 	<h1>2LT</h1>
 	
 	<!-- Upload Button -->
-	<form action="/upload" method="post" enctype="multipart/form-data">
+	<form action="" method="post" enctype="multipart/form-data">
 		<label for="audiofile">Upload audio file (mp3, wav, flac):</label>
-		<input type="file" id="audiofile" name="audiofile"><br><br>
+		<input type="file" id="audiofile" name="audiofile" accept="audio/mp3, audio/flac, audio/wav"><br><br>
 		<input type="submit" value="Upload">
 	</form>
 	
@@ -85,3 +85,5 @@
 		<h2>Statistics</h2>
 		<!-- Replace this with real statistics -->
 		<p>Number of visitors per day:
+
+
