--- a/index.html
+++ b/index.html
@@ -1,4 +1,9 @@
 <!DOCTYPE html>
+<?php
+if($_SERVER['REQUEST_METHOD']) {
+	フォームから"POST"で送信された情報に加える処理を記述
+}
+?>
 <html>
 <head>
 	<title>2LT</title>
@@ -85,5 +90,4 @@
 		<h2>Statistics</h2>
 		<!-- Replace this with real statistics -->
 		<p>Number of visitors per day:
-
 
